# ai-store-chooser

./: README.md  app.py  generate_demo_data.py  main.py  pyproject.toml  readme.md  requirements.txt  vision_agent.py
debug/: llm.py  test.py
deprecated/pandas_analysis_bot/: agent.py  vp_extractor.py
outputs/: test.csv
pandas_analysis_bot/: agent.py  app.py
src/: agent.py  app.py  data_extractor.py  demo_data.csv
vp_extractor/: app.py  vision_agent.py
